--- a/Stats/Bayesian Stats.ipynb
+++ b/Stats/Bayesian Stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -83,9 +83,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'waiting_times_hour' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-97a6ceb102ab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Exponential distribution with maximum likelihood fit to the data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mlambda_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwaiting_times_hour\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mdistribution\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpon\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscale\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mlambda_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'waiting_times_hour' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Exponential distribution with maximum likelihood fit to the data\n",
     "lambda_ = 1 / np.mean(waiting_times_hour)\n",
@@ -224,6 +236,183 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.00049998,\n",
+       "       0.00124994, 0.0019999 , 0.00274986, 0.00349983, 0.00424979,\n",
+       "       0.00499975, 0.00574971, 0.00649968, 0.00724964, 0.0079996 ,\n",
+       "       0.00874956, 0.00949953, 0.01024949, 0.01099945, 0.01174941,\n",
+       "       0.01249938, 0.01324934, 0.0139993 , 0.01474926, 0.01549923,\n",
+       "       0.01624919, 0.01699915, 0.01774911, 0.01849908, 0.01924904,\n",
+       "       0.019999  , 0.02074896, 0.02149893, 0.02224889, 0.02299885,\n",
+       "       0.02374881, 0.02449878, 0.02524874, 0.0259987 , 0.02674866,\n",
+       "       0.02749863, 0.02824859, 0.02899855, 0.02974851, 0.03049848,\n",
+       "       0.03124844, 0.0319984 , 0.03274836, 0.03349833, 0.03424829,\n",
+       "       0.03499825, 0.03574821, 0.03649818, 0.03724814, 0.0379981 ,\n",
+       "       0.03874806, 0.03949803, 0.04024799, 0.04099795, 0.04174791,\n",
+       "       0.04249788, 0.04324784, 0.0439978 , 0.04474776, 0.04549773,\n",
+       "       0.04624769, 0.04699765, 0.04774761, 0.04849758, 0.04924754,\n",
+       "       0.0499975 , 0.04924754, 0.04849758, 0.04774761, 0.04699765,\n",
+       "       0.04624769, 0.04549773, 0.04474776, 0.0439978 , 0.04324784,\n",
+       "       0.04249788, 0.04174791, 0.04099795, 0.04024799, 0.03949803,\n",
+       "       0.03874806, 0.0379981 , 0.03724814, 0.03649818, 0.03574821,\n",
+       "       0.03499825, 0.03424829, 0.03349833, 0.03274836, 0.0319984 ,\n",
+       "       0.03124844, 0.03049848, 0.02974851, 0.02899855, 0.02824859,\n",
+       "       0.02749863, 0.02674866, 0.0259987 , 0.02524874, 0.02449878,\n",
+       "       0.02374881, 0.02299885, 0.02224889, 0.02149893, 0.02074896,\n",
+       "       0.019999  , 0.01924904, 0.01849908, 0.01774911, 0.01699915,\n",
+       "       0.01624919, 0.01549923, 0.01474926, 0.0139993 , 0.01324934,\n",
+       "       0.01249938, 0.01174941, 0.01099945, 0.01024949, 0.00949953,\n",
+       "       0.00874956, 0.0079996 , 0.00724964, 0.00649968, 0.00574971,\n",
+       "       0.00499975, 0.00424979, 0.00349983, 0.00274986, 0.0019999 ,\n",
+       "       0.00124994, 0.00049998, 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        ])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prior"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([8.01851324e-44, 5.57977685e-43, 3.84146589e-42, 2.61530794e-41,\n",
+       "       1.75984820e-40, 1.16984261e-39, 7.67795592e-39, 4.97266244e-38,\n",
+       "       3.17621847e-37, 1.99966281e-36, 1.24013794e-35, 7.57159591e-35,\n",
+       "       4.54823497e-34, 2.68638105e-33, 1.55916211e-32, 8.88675312e-32,\n",
+       "       4.97110780e-31, 2.72742946e-30, 1.46682909e-29, 7.72807077e-29,\n",
+       "       3.98633758e-28, 2.01206208e-27, 9.93194210e-27, 4.79206840e-26,\n",
+       "       2.25885686e-25, 1.03973650e-24, 4.67122290e-24, 2.04751377e-23,\n",
+       "       8.75267830e-23, 3.64766436e-22, 1.48150581e-21, 5.86238127e-21,\n",
+       "       2.25947275e-20, 8.47997818e-20, 3.09842313e-19, 1.10194468e-18,\n",
+       "       3.81396637e-18, 1.28447698e-17, 4.20873185e-17, 1.34153683e-16,\n",
+       "       4.15947376e-16, 1.25436223e-15, 3.67897011e-15, 1.04935652e-14,\n",
+       "       2.91066633e-14, 7.85085594e-14, 2.05912452e-13, 5.25143071e-13,\n",
+       "       1.30224507e-12, 3.13993250e-12, 7.36129781e-12, 1.67799309e-11,\n",
+       "       3.71898038e-11, 8.01406003e-11, 1.67909004e-10, 3.42047402e-10,\n",
+       "       6.77467021e-10, 1.30460348e-09, 2.44262407e-09, 4.44653649e-09,\n",
+       "       7.86998262e-09, 1.35429115e-08, 2.26587743e-08, 3.68592689e-08,\n",
+       "       5.82965452e-08, 8.96447005e-08, 1.34026926e-07, 1.94825176e-07,\n",
+       "       2.75349091e-07, 3.78362199e-07, 5.05495555e-07, 6.56617474e-07,\n",
+       "       8.29264391e-07, 1.01826092e-06, 1.21565577e-06, 1.41106697e-06,\n",
+       "       1.59246577e-06, 1.74734258e-06, 1.86410976e-06, 1.93352758e-06,\n",
+       "       1.94991073e-06, 1.91189728e-06, 1.82263561e-06, 1.68935380e-06,\n",
+       "       1.52239323e-06, 1.33388547e-06, 1.13630706e-06, 9.41148902e-07,\n",
+       "       7.57890462e-07, 5.93389709e-07, 4.51709315e-07, 3.34320918e-07,\n",
+       "       2.40576678e-07, 1.68317380e-07, 1.14495883e-07, 7.57244706e-08,\n",
+       "       4.86931745e-08, 3.04428564e-08, 1.85049611e-08, 1.09364513e-08,\n",
+       "       6.28420200e-09, 3.51082610e-09, 1.90701438e-09, 1.00712664e-09,\n",
+       "       5.17129923e-10, 2.58166995e-10, 1.25310436e-10, 5.91369916e-11,\n",
+       "       2.71341788e-11, 1.21048554e-11, 5.25034687e-12, 2.21412357e-12,\n",
+       "       9.07822998e-13, 3.61897826e-13, 1.40267235e-13, 5.28581507e-14,\n",
+       "       1.93665901e-14, 6.89889962e-15, 2.38941705e-15, 8.04617655e-16,\n",
+       "       2.63434485e-16, 8.38573551e-17, 2.59534540e-17, 7.80970509e-18,\n",
+       "       2.28485988e-18, 6.49935080e-19, 1.79748739e-19, 4.83333830e-20,\n",
+       "       1.26361276e-20, 3.21193154e-21, 7.93787077e-22, 1.90733613e-22,\n",
+       "       4.45590493e-23, 1.01211547e-23, 2.23516547e-24, 4.79926535e-25,\n",
+       "       1.00190216e-25, 2.03358032e-26, 4.01312620e-27, 7.69998309e-28,\n",
+       "       1.43642248e-28, 2.60531405e-29, 4.59434325e-30, 7.87720709e-31,\n",
+       "       1.31312647e-31, 2.12826800e-32, 3.35375662e-33, 5.13833291e-34,\n",
+       "       7.65417525e-35, 1.10856211e-35, 1.56101520e-36, 2.13717309e-37,\n",
+       "       2.84483925e-38, 3.68180881e-39, 4.63287093e-40, 5.66793209e-41,\n",
+       "       6.74193472e-42, 7.79704275e-43, 8.76719680e-44, 9.58466776e-45,\n",
+       "       1.01877631e-45, 1.05284898e-46, 1.05788581e-47, 1.03346785e-48,\n",
+       "       9.81613714e-50, 9.06504013e-51, 8.13924858e-52, 7.10533178e-53,\n",
+       "       6.03072991e-54, 4.97669314e-55, 3.99298166e-56, 3.11486505e-57,\n",
+       "       2.36247175e-58, 1.74212567e-59, 1.24904419e-60, 8.70686064e-62,\n",
+       "       5.90107116e-63, 3.88853111e-64, 2.49129853e-65, 1.55185605e-66,\n",
+       "       9.39858694e-68, 5.53425492e-69, 3.16840890e-70, 1.76363520e-71,\n",
+       "       9.54468845e-73, 5.02227194e-74, 2.56935528e-75, 1.27800797e-76,\n",
+       "       6.18056865e-78, 2.90608808e-79, 1.32853983e-80, 5.90508092e-82,\n",
+       "       2.55189379e-83, 1.07222222e-84, 4.38018528e-86, 1.73974512e-87,\n",
+       "       6.71837497e-89, 2.52248341e-90, 9.20826623e-92, 3.26823204e-93,\n",
+       "       1.12780331e-94])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "likelihood"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "201"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(prior)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "201"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(likelihood)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
