--- a/Math/Modelling_Intro_D2.ipynb
+++ b/Math/Modelling_Intro_D2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,13 +518,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Q2: Data Interpolation"
    ]
   },
@@ -693,250 +686,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$f_{i+1}(x) = \\frac{k_{i+2}-k_{i+1}}{6h}x^3+ \\frac{(k_{i+1}-k_{i+2})x_{i+1}}{2h} x^2 + A_{i+1}x + B_{i+1}$$\n"
+    "$$f_i'(x)= \\frac{k_{i+1}-k_i}{2h} x^2 + \\frac{(k_i-k_{i+1})x_i}{h} x + A_i$$\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$k = f''(x)$$\n",
-    "$$k' = f'''(x)$$"
+    "$$f_i''(x)= \\frac{k_{i+1}-k_i}{h} x+ \\frac{(k_i-k_{i+1})x_i}{h}$$\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$f_{i+1}(x_{i+1}) = \\frac{k_{i+2}-k_{i+1}}{6h}x_{i+1}^3+ \\frac{(k_{i+1}-k_{i+2})x_{i+1}}{2h} x_{i+1}^2 + A_{i+1}x_{i+1} + B_{i+1}$$\n"
+    "$$f_i'''(x)= \\frac{k_{i+1}-k_i}{h}$$\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$f_{i+1}(x_{i+1}) = \\frac{k_{i+2}-k_{i+1}}{6h}x_{i+1}^3+ \\frac{k_{i+1}-k_{i+2}}{2h} x_{i+1}^3 + A_{i+1}x_{i+1} + B_{i+1}$$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$f_{i+1}(x_{i+1}) = \\frac{k_{i+1}-k_{i+2}}{3h}x_{i+1}^3 + A_{i+1}x_{i+1} + B_{i+1}$$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$f_{i+1}'(x_{i+1}) = \\frac{2k_{i+1}-2k_{i+2}}{h}x_{i+1}^2 + A_{i+1}$$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$f_{i+1}'(x_{i+1}) = \\frac{2k_{i+1}-2k_{i+2}}{h}x_{i+1}^2 + A_{i+1}$$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Deribing "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "AGAIN\n",
+    "Since \n",
+    "$$f_i''(x_i)= k_i$$\n",
+    "$$f_i''(x_i+1)= k_i+1$$\n",
     "\n",
-    "$$f_i''(x) = k_i$$\n",
+    "and we know that for a cubic spline, \n",
+    "$$f_i''(x_i)= f_i''(x_i+1)$$\n",
     "\n",
-    "$$f_i''(x)= \\frac{k_{i+1}-k_i}{h}x + \\frac{(k_i-k_{i+1})x_i}{h}$$\n",
+    "Therefore,\n",
+    "$$k_i= k_i+1$$\n",
     "\n",
-    "$$k_i'= df_i''(x)/ d x$$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "______"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$f_i'(x)= \\frac{k_{i+1}-k_i}{2h} x^2 + \\frac{(k_i-k_{i+1})x_i}{h} x + A_i$$\n",
     "\n",
-    "$$f_{i+1}'(x)= \\frac{k_{i+2}-k_{i+1}}{2h} x^2 + \\frac{(k_{i+1}-k_{i+2})x_{i+1}}{h} x + A_{i+1}$$\n",
+    "$$f_i'''(x)= \\frac{0}{h}$$\n",
+    "$$f_i'''(x)= 0$$\n",
+    "$$f_i'''(x)= 0$$\n",
     "\n",
-    "Using $f_i'(x_{i+1}) = f_{i+1}'(x_{i+1})$\n",
+    "Since $$f_i''(x_i)= k_i$$,\n",
     "\n",
-    "$$\\frac{k_{i+1}-k_i}{2h} x_{i+1}^2 + \\frac{(k_i-k_{i+1})x_i}{h} x_{i+1} + A_i = \\frac{k_{i+2}-k_{i+1}}{2h} x_{i+1}^2 + \\frac{(k_{i+1}-k_{i+2})x_{i+1}}{h} x_{i+1} + A_{i+1}$$\n",
+    "$$f_i'''(x_i)= k_i'$$\n",
     "\n",
-    "$$\\frac{k_{i+1}-k_i}{2h} x_{i+1}^2 - \\frac{k_{i+2}-k_{i+1}}{2h} x_{i+1}^2 - \\frac{k_{i+1}-k_{i+2}}{h} x_{i+1}^2 + \\frac{(k_i-k_{i+1})x_i}{h} x_{i+1}  + A_i  - A_{i+1} = 0$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\frac{-k_i-k_{i+1}}{2h} x_{i+1}^2+ \\frac{(k_i-k_{i+1})x_i}{h} x_{i+1} =  A_{i+1} - A_i$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\frac{-k_i-k_{i+1}}{2h} x_{i+1}^2+ \\frac{(k_i-k_{i+1})x_i}{h} x_{i+1}= \\frac{\\frac{k_{i+1}-k_i}{6h}x_{i+1}^3+ \\frac{(k_i-k_{i+1})x_i}{2h}x_{i+1}^2 - \\frac{k_i-k_{i+1}}{3h} x_i^3 + y_i - y_{i+1}}{-h} - \\frac{\\frac{k_{i+1}-k_i}{6h}x_{i+1}^3+ \\frac{(k_i-k_{i+1})x_i}{2h}x_{i+1}^2 - \\frac{k_i-k_{i+1}}{3h} x_i^3 + y_i - y_{i+1}}{-h}$$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\frac{-k_i-k_{i+1}}{2h}(x_i+h)^2+ \\frac{(k_i-k_{i+1})x_i}{h}(x_i+h)= \\frac{\\frac{k_{i+1}-k_i}{6h}(x_i+h)^3+ \\frac{(k_i-k_{i+1})x_i}{2h}(x_i+h)^2 - \\frac{k_i-k_{i+1}}{3h} x_i^3 + y_i - y_{i+1}}{-h} - \\frac{\\frac{k_{i+1}-k_i}{6h}(x_i+h)^3+ \\frac{(k_i-k_{i+1})x_i}{2h}(x_i+h)^2 - \\frac{k_i-k_{i+1}}{3h} x_i^3 + y_i - y_{i+1}}{-h}$$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$(-k_i-k_{i+1})(x_i+h)^2 + h(k_i-k_{i+1})x_i(x_i+h)= h(- \\frac{k_{i+1}-k_i}{6h}(x_i+h)^3 - \\frac{(k_i-k_{i+1})x_i}{2h}(x_i+h)^2 + \\frac{k_i-k_{i+1}}{3h} x_i^3 - y_i + y_{i+1} + \\frac{k_{i+1}-k_i}{6h}(x_i+h)^3 + \\frac{(k_i-k_{i+1})x_i}{2h}(x_i+h)^2 - \\frac{k_i-k_{i+1}}{3h} x_i^3 + y_i - y_{i+1})$$\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "___________________\n",
-    "trying something new"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\frac{-k_i-k_{i+1}}{2h} x_{i+1}^2+ \\frac{(k_i-k_{i+1})x_i}{h} x_{i+1}= \\frac{\\frac{k_{i+2}-k_{i+1}}{6h}x_{i+2}^3+ \\frac{(k_{i+1}-k_{i+2})x_{i+1}}{2h}x_{i+2}^2 - \\frac{k_{i+1}-k_{i+2}}{3h} x_{i+1}^3 + y_{i+1} - y_{i+2}}{-h} - \\frac{\\frac{k_{i+1}-k_i}{6h}x_{i+1}^3+ \\frac{(k_i-k_{i+1})x_i}{2h}x_{i+1}^2 - \\frac{k_i-k_{i+1}}{3h} x_i^3 + y_i - y_{i+1}}{-h}$$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\frac{-k_i-k_{i+1}}{2h} x_{i+1}^2+ \\frac{(k_i-k_{i+1})x_i}{h} x_{i+1}= \\frac{\\frac{k_{i+2}-k_{i+1}}{6h}x_{i+2}^3+ \\frac{(k_{i+1}-k_{i+2})x_{i+1}}{2h}x_{i+2}^2 - \\frac{k_{i+1}-k_{i+2}}{3h} x_{i+1}^3 + y_{i+1} - y_{i+2} - \\frac{k_{i+1}-k_i}{6h}x_{i+1}^3 - \\frac{(k_i-k_{i+1})x_i}{2h}x_{i+1}^2 + \\frac{k_i-k_{i+1}}{3h} x_i^3 - y_i +y_{i+1}}{-h}$$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\frac{-k_i-k_{i+1}}{2h} x_{i+1}^2+ \\frac{(k_i-k_{i+1})x_i}{h} x_{i+1}= \\frac{-\\frac{k_{i+2}+k_{i+1}}{6h}x_{i+2}^3- \\frac{(k_{i+1}+k_{i+2})x_{i+1}}{2h}x_{i+2}^2 + \\frac{k_{i+1}-k_{i+2}}{3h} x_{i+1}^3 - y_{i+1} + y_{i+2} + \\frac{k_{i+1}-k_i}{6h}x_{i+1}^3 + \\frac{(k_i-k_{i+1})x_i}{2h}x_{i+1}^2 - \\frac{k_i-k_{i+1}}{3h} x_i^3 + y_i - y_{i+1}}{h}$$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$-(k_i+k_{i+1})x_{i+1}^2 + hx_i(k_i-k_{i+1})x_{i+1} = -\\frac{k_{i+2}+k_{i+1}}{6h}x_{i+2}^3- \\frac{(k_{i+1}+k_{i+2})x_{i+1}}{2h}x_{i+2}^2 + \\frac{k_{i+1}-k_{i+2}}{3h} x_{i+1}^3 - y_{i+1} + y_{i+2} + \\frac{k_{i+1}-k_i}{6h}x_{i+1}^3 + \\frac{(k_i-k_{i+1})x_i}{2h}x_{i+1}^2 - \\frac{k_i-k_{i+1}}{3h} x_i^3 + y_i - y_{i+1}$$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$-\\frac{k_{i+2}+k_{i+1}}{6h}x_{i+2}^3 - \\frac{(k_{i+1}+k_{i+2})x_{i+1}}{2h}x_{i+2}^2 + \\frac{k_{i+1}-k_{i+2}}{3h} x_{i+1}^3 + \\frac{k_{i+1}-k_i}{6h}x_{i+1}^3 + \\frac{(k_i-k_{i+1})x_i}{2h}x_{i+1}^2 + (k_i+k_{i+1})x_{i+1}^2 - hx_i(k_i-k_{i+1})x_{i+1} - \\frac{k_i-k_{i+1}}{3h} x_i^3 + y_i - y_{i+1} = 0$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$-\\frac{k_{i+2}+k_{i+1}}{6h}x_{i+2}^3 - \\frac{(k_{i+1}+k_{i+2})x_{i+1}}{2h}x_{i+2}^2 + \\frac{-2k_{i+1}+3k_{i+1}-k_i}{6h} x_{i+1}^3 + \\frac{2h(k_i+k_{i+1}) + (k_i-k_{i+1})x_i}{2h}x_{i+1}^2 - hx_i(k_i-k_{i+1})x_{i+1} - \\frac{k_i-k_{i+1}}{3h} x_i^3 + y_i - y_{i+1} = 0$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$-\\frac{k_{i+2}+k_{i+1}}{6h}x_{i+2}^3 - \\frac{(k_{i+1}+k_{i+2})x_{i+1}}{2h}x_{i+2}^2 + \\frac{-2k_{i+1}+3k_{i+1}-k_i}{6h} x_{i+1}^3 + \\frac{2h(k_i+k_{i+1}) + (k_i-k_{i+1})x_i}{2h}x_{i+1}^2 - hx_i(k_i-k_{i+1})x_{i+1} - \\frac{k_i-k_{i+1}}{3h} x_i^3 + y_i - y_{i+1} = 0$$"
+    "Thus, \n",
+    "$$k'(x)= 0$$\n"
    ]
   },
   {
@@ -950,7 +741,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a"
+    "Natural Spline:\n",
+    "$$f_1''(x_1) == 0$$\n",
+    "$$f_n''(x_n+1) == 0$$\n",
+    "\n",
+    "Goes through the Points:\n",
+    "$$f_1(x_1) == y_1$$\n",
+    "$$f_1(x_2) == y_2$$\n",
+    "$$f_2(x_2) == y_2$$\n",
+    "$$f_2(x_3) == y_3$$\n",
+    "$$f_1'(x_2) == f_2'(x_2)$$\n",
+    "$$f_1''(x_2) == f_2''(x_2)$$\n",
+    "\n"
    ]
   },
   {
@@ -964,13 +766,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a"
+    "Making use of the Lagrange method makes the function slightly more time effective by a constant factor (less equations to solve at each step). \n",
+    "It also makes the function more space effective by a constant factor (less variables to store at each step).\n",
+    "\n",
+    "However, it is also much less undertandable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cubicSpline(x1,x2,x3,y1,y2,y3):\n",
+    "    A = np.array([[x1**3,x1**2,x1,1,0,0,0,0],[x2**3,x2**2,x2,1,0,0,0,0],[0,0,0,0,x2**3,x2**2,x2,1],[0,0,0,0,x3**3,x3**2,x3,1],[3*x2**2,2*x2,0,0,-3*x2**2,-2*x2,0,0],[6*x2,2,0,0,0,0,0,0],[6*x1,2,0,0,0,0,0,0],[0,0,0,0,6*x3,2,0,0]])\n",
+    "    return(A@np.array([y1,y2,y2,y3,0,0,0,0]))\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "# Q3: Non-linear systems"
    ]
   },
@@ -1205,13 +1024,14 @@
    "source": [
     "$$1 = \\frac{2cos(\\theta)}{\\bar \\rho \\bar v^2}$$\n",
     "\n",
-    "$$\\bar v^2 = k2cos(\\theta)$$\n",
-    "$$\\bar v = c_1\\sqrt{2cos(\\theta)}+c_2$$\n"
+    "$$\\bar v^2 = 2cos(\\theta)$$\n",
+    "$$\\theta = cos^{-1}(\\frac{\\bar v^2}{2})$$\n",
+    "$$\\frac{\\delta}{\\delta \\theta} =-\\frac{x}{\\sqrt{1-\\frac{x^4}{4}}}$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -1220,8 +1040,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root is at:  1.54\n",
-      "f(x) at root is:  0.24815905819641612\n"
+      "Root is at:  1.4\n",
+      "f(x) at root is:  0.20033484232312024\n"
      ]
     }
    ],
@@ -1239,48 +1059,84 @@
     "    print('f(x) at root is: ', f(x0))\n",
     "\n",
     "def f(x):\n",
-    "    return(math.sqrt(2*math.cos(x)))\n",
+    "    return(math.acos(x**2/2))\n",
     "\n",
     "def df(x):\n",
-    "    return(-math.sin(x)/(math.sqrt(2)*math.sqrt(math.cos(x))))\n",
+    "    return(-x/(math.sqrt(1-x**4/4)))\n",
     "\n",
     "if __name__==\"__main__\":\n",
-    "    newtons_method(f, df, 1.54, 0.3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\bar v = c_1\\sqrt{2cos(\\theta)}+c_2$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "____BVLAHNAUDIOX___\n",
-    "\n",
-    "________\n",
-    "\n",
-    "\n",
-    "\n",
-    "_________\n",
-    "$$f_i''(x)=y_i+\\frac{y_{i+1}-y_i}{x_{i+1}-x_i}(x-x_i)$$\n",
-    "$$f_i''(x)=y_i\\frac{x-x_{i+1}}{x_i-x_{i+1}}+y_{i+1}\\frac{x-x_i}{x_{i+1}-x_i}$$\n",
-    "\n",
-    "Subbing in the values that we know:\n",
-    "$$f_i''(x)=k_i\\frac{x-(x_i+h)}{x_i-(x_i+h)}+k_{i+1}\\frac{x-x_i}{(x_i+h)-x_i}$$\n",
-    "$$f_i''(x)=k_i\\frac{x-x_i-h}{-h}+k_{i+1}\\frac{x-x_i}{h}$$\n",
-    "\n"
+    "    newtons_method(f, df, 1.4, 0.3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "math domain error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-c66369cbf351>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mnewtons_method\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1.3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-19-c66369cbf351>\u001b[0m in \u001b[0;36mnewtons_method\u001b[0;34m(f, df, x0, e)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0mdelta\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mx0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx0\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mdelta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Root is at: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'f(x) at root is: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-19-c66369cbf351>\u001b[0m in \u001b[0;36mdx\u001b[0;34m(f, x)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mdx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mnewtons_method\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-19-c66369cbf351>\u001b[0m in \u001b[0;36mf\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0;32mreturn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0macos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: math domain error"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "def dx(f, x):\n",
+    "    return abs(0-f(x))\n",
+    "\n",
+    "def newtons_method(f, df, x0, e):\n",
+    "    delta = dx(f, x0)\n",
+    "    while delta > e:\n",
+    "        x0 = x0 - f(x0)/df(x0)\n",
+    "        delta = dx(f, x0)\n",
+    "    print('Root is at: ', x0)\n",
+    "    print('f(x) at root is: ', f(x0))\n",
+    "\n",
+    "def f(x):\n",
+    "    return(math.acos(x**2/2))\n",
+    "\n",
+    "def df(x):\n",
+    "    return(-x/(math.sqrt(1-x**4/4)))\n",
+    "\n",
+    "if __name__==\"__main__\":\n",
+    "    newtons_method(f, df, 1.3, 0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02457703000328076"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.acos(1.414**2/2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since this is a function that is not continuous at its root (or only continuous from the left or the right, not both), Newton's method will not work well for approximating it. This is because Newton's method relies on linear approximations of the function to get sequentially better estimates of the function at its real root. However, if the function is mostly undefined, we are unable to sequentially estimate the root as when we get closer to the root, we get an undefined function. Newton's method will only work for points extremely close to the root which defeats the purpose of the approximation."
+   ]
   }
  ],
  "metadata": {
