--- a/Optimization/UnconstrainedMultivariable.ipynb
+++ b/Optimization/UnconstrainedMultivariable.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "-2.0*2.71828182845905**(-x**2 - y**2 - z**2)*x*(2*x**2 + 3*y**2 + z**2) + 4*2.71828182845905**(-x**2 - y**2 - z**2)*x"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "-2.0*2.71828182845905**(-x**2 - y**2 - z**2)*y*(2*x**2 + 3*y**2 + z**2) + 6*2.71828182845905**(-x**2 - y**2 - z**2)*y"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -327,13 +327,83 @@
        "-2.0*2.71828182845905**(-x**2 - y**2 - z**2)*z*(2*x**2 + 3*y**2 + z**2) + 2*2.71828182845905**(-x**2 - y**2 - z**2)*z"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "f3.diff(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hessian(n, f, vs):\n",
+    "    '''\n",
+    "    Returns hessian of a n dimensional function\n",
+    "    as a 2d array\n",
+    "    \n",
+    "    input: (3, f(x,y,z), [x,y,z])\n",
+    "    output: [[fxx, fxy, fxz],[fyx, fyy, fyz],[fzx, fzy, fzz]]\n",
+    "    '''\n",
+    "    \n",
+    "    hessian = []\n",
+    "    \n",
+    "    for row in range(n):\n",
+    "        arow = []\n",
+    "        for col in range(n):\n",
+    "            arow.append(f.diff(vs[row]).diff(vs[col]))\n",
+    "        hessian.append(arow)\n",
+    "    return(hessian)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f3 = (2*x**2+3*y**2+z**2)*math.e**-(x**2+y**2+z**2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[4.0*2.71828182845905**(-x**2 - y**2 - z**2)*x**2*(2*x**2 + 3*y**2 + z**2) - 16.0*2.71828182845905**(-x**2 - y**2 - z**2)*x**2 - 2.0*2.71828182845905**(-x**2 - y**2 - z**2)*(2*x**2 + 3*y**2 + z**2) + 4*2.71828182845905**(-x**2 - y**2 - z**2),\n",
+       "  4.0*2.71828182845905**(-x**2 - y**2 - z**2)*x*y*(2*x**2 + 3*y**2 + z**2) - 20.0*2.71828182845905**(-x**2 - y**2 - z**2)*x*y,\n",
+       "  4.0*2.71828182845905**(-x**2 - y**2 - z**2)*x*z*(2*x**2 + 3*y**2 + z**2) - 12.0*2.71828182845905**(-x**2 - y**2 - z**2)*x*z],\n",
+       " [4.0*2.71828182845905**(-x**2 - y**2 - z**2)*x*y*(2*x**2 + 3*y**2 + z**2) - 20.0*2.71828182845905**(-x**2 - y**2 - z**2)*x*y,\n",
+       "  4.0*2.71828182845905**(-x**2 - y**2 - z**2)*y**2*(2*x**2 + 3*y**2 + z**2) - 24.0*2.71828182845905**(-x**2 - y**2 - z**2)*y**2 - 2.0*2.71828182845905**(-x**2 - y**2 - z**2)*(2*x**2 + 3*y**2 + z**2) + 6*2.71828182845905**(-x**2 - y**2 - z**2),\n",
+       "  4.0*2.71828182845905**(-x**2 - y**2 - z**2)*y*z*(2*x**2 + 3*y**2 + z**2) - 16.0*2.71828182845905**(-x**2 - y**2 - z**2)*y*z],\n",
+       " [4.0*2.71828182845905**(-x**2 - y**2 - z**2)*x*z*(2*x**2 + 3*y**2 + z**2) - 12.0*2.71828182845905**(-x**2 - y**2 - z**2)*x*z,\n",
+       "  4.0*2.71828182845905**(-x**2 - y**2 - z**2)*y*z*(2*x**2 + 3*y**2 + z**2) - 16.0*2.71828182845905**(-x**2 - y**2 - z**2)*y*z,\n",
+       "  4.0*2.71828182845905**(-x**2 - y**2 - z**2)*z**2*(2*x**2 + 3*y**2 + z**2) - 8.0*2.71828182845905**(-x**2 - y**2 - z**2)*z**2 - 2.0*2.71828182845905**(-x**2 - y**2 - z**2)*(2*x**2 + 3*y**2 + z**2) + 2*2.71828182845905**(-x**2 - y**2 - z**2)]]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hessian(3,f3,[x,y,z])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# I'm switching to Sage... :P \n"
    ]
   },
   {
