--- a/Stats/pyStan.ipynb
+++ b/Stats/pyStan.ipynb
@@ -102,7 +102,7 @@
     "data {  \n",
     "    int<lower=1> num_trials;  // number of trials in the data set\n",
     "    int<lower=0> patients[num_trials];  // number of patients per trial\n",
-    "    int<lower=0> improved[num_trials];  // number of improved patients per trial\n",
+    "    int<lower=0> (improved)[num_trials];  // number of improved patients per trial\n",
     "    real<lower=0> alpha;  // fixed prior hyperparameter\n",
     "    real<lower=0> beta;   // fixed prior hyperparameter\n",
     "}\n",
@@ -111,12 +111,9 @@
     "// parameters of the model. Stan will generate samples from the posterior\n",
     "// distributions over all parameters.\n",
     "parameters {\n",
-    "    real<lower=0,upper=1> p;  // probability of improvement - the\n",
-    "                              // parameter of the binomial likelihood\n",
+    "    real<lower=0> lambda;  // rate for exponential distribution\n",
     "}\n",
     "\n",
-    "// The model block contains all probability distributions in the model.\n",
-    "// This of this as specifying the generative model for the scenario.\n",
     "model {\n",
     "    p ~ beta(alpha, beta);  // prior over p\n",
     "    for(i in 1:num_trials) {\n",
