--- a/Math/Modelling_Intro_D4.ipynb
+++ b/Math/Modelling_Intro_D4.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,13 +838,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cubicSpline(x1,x2,x3,y1,y2,y3):\n",
     "    A = np.array([[x1**3,x1**2,x1,1,0,0,0,0],[x2**3,x2**2,x2,1,0,0,0,0],[0,0,0,0,x2**3,x2**2,x2,1],[0,0,0,0,x3**3,x3**2,x3,1],[3*x2**2,2*x2,0,0,-3*x2**2,-2*x2,0,0],[6*x2,2,0,0,-6*x2,-2,0,0],[6*x1,2,0,0,0,0,0,0],[0,0,0,0,6*x3,2,0,0]])\n",
-    "    return(A@np.array([y1,y2,y2,y3,0,0,0,0]))"
+    "    b = np.array([y1,y2,y2,y3,0,0,0,0])\n",
+    "    print(A)\n",
+    "    print(b)\n",
+    "    return(A@b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[      0       0       0       1       0       0       0       0]\n",
+      " [ 729000    8100      90       1       0       0       0       0]\n",
+      " [      0       0       0       0  729000    8100      90       1]\n",
+      " [      0       0       0       0 5832000   32400     180       1]\n",
+      " [  24300     180       0       0  -24300    -180       0       0]\n",
+      " [    540       2       0       0    -540      -2       0       0]\n",
+      " [      0       2       0       0       0       0       0       0]\n",
+      " [      0       0       0       0    1080       2       0       0]]\n",
+      "[0.33333333 0.66666667 0.66666667 1.         0.         0.\n",
+      " 0.         0.        ]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1.00000000e+00, 2.48461000e+05, 0.00000000e+00, 0.00000000e+00,\n",
+       "       8.22000000e+03, 1.81333333e+02, 1.33333333e+00, 0.00000000e+00])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cubicSpline(0,90,180,1/3, 2/3,1)"
    ]
   },
   {
