--- a/Optimization/Cvx.ipynb
+++ b/Optimization/Cvx.ipynb
@@ -101450,6 +101450,193 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution: 1473.6842105263156\n",
+      "c: 10.526315789473683\n",
+      "s: 23.684210526315788\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cvxpy as cp\n",
+    "\n",
+    "c,s = cp.Variable(), cp.Variable()\n",
+    "f = 50*c+40*s\n",
+    "g = [3*c+5*s <= 150, 10*c+4*s <= 200, c >= 0, s >= 0]\n",
+    "sol = cp.Problem(cp.Maximize(f), g)\n",
+    "print(\"Solution:\", sol.solve())\n",
+    "print(\"c:\", c.value)\n",
+    "print(\"s:\", s.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution: 1460.0\n",
+      "c: 9.999999999999998\n",
+      "s: 24.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "c,s = cp.Variable(), cp.Variable()\n",
+    "f = 50*c+40*s\n",
+    "g = [3*c+5*s <= 150, 10*c+4*s <= 200, c >= 0, s >= 0, c<=10]\n",
+    "sol = cp.Problem(cp.Maximize(f), g)\n",
+    "print(\"Solution:\", sol.solve())\n",
+    "print(\"c:\", c.value)\n",
+    "print(\"s:\", s.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution: 549.9999999999999\n",
+      "c: 10.999999999999998\n",
+      "s: 9.960268747237745e-23\n"
+     ]
+    }
+   ],
+   "source": [
+    "c,s = cp.Variable(), cp.Variable()\n",
+    "f = 50*c+40*s\n",
+    "g = [3*c+5*s <= 150, 10*c+4*s <= 200, c >= 0, s >= 0, c>=11]\n",
+    "sol = cp.Problem(cp.Minimize(f), g)\n",
+    "print(\"Solution:\", sol.solve())\n",
+    "print(\"c:\", c.value)\n",
+    "print(\"s:\", s.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution: 1434.0\n",
+      "c: 8.999999999999998\n",
+      "s: 24.599999999999998\n"
+     ]
+    }
+   ],
+   "source": [
+    "c,s = cp.Variable(), cp.Variable()\n",
+    "f = 50*c+40*s\n",
+    "g = [3*c+5*s <= 150, 10*c+4*s <= 200, c >= 0, s >= 0, c<=10, c<=9]\n",
+    "sol = cp.Problem(cp.Maximize(f), g)\n",
+    "print(\"Solution:\", sol.solve())\n",
+    "print(\"c:\", c.value)\n",
+    "print(\"s:\", s.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution: 1473.6842105263156\n",
+      "c: 10.526315789473683\n",
+      "s: 23.684210526315788\n"
+     ]
+    }
+   ],
+   "source": [
+    "c,s = cp.Variable(), cp.Variable()\n",
+    "f = 50*c+40*s\n",
+    "g = [3*c+5*s <= 150, 10*c+4*s <= 200, c >= 0, s >= 0, c<=10, c<=9]\n",
+    "sol = cp.Problem(cp.Maximize(f), g)\n",
+    "print(\"Solution:\", sol.solve())\n",
+    "print(\"c:\", c.value)\n",
+    "print(\"s:\", s.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "30+(5*24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "196"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "100+(4*24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "480000"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "500*(40*24)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
