--- a/Optimization/Cvx.ipynb
+++ b/Optimization/Cvx.ipynb
@@ -101568,7 +101568,15 @@
    "source": [
     "c,s = cp.Variable(), cp.Variable()\n",
     "f = 50*c+40*s\n",
-    "g = [3*c+5*s <= 150, 10*c+4*s <= 200, c >= 0, s >= 0, c<=10, c<=9]\n",
+    "g = []\n",
+    "for i in range(6):\n",
+    "    sum(x[:][i]) = -\n",
+    "    for j in range(6):\n",
+    "        # sum going in has to be 1\n",
+    "        # sum going out has to be 1\n",
+    "        # 0 or 1\n",
+    "        g.append(x[i][j] >= 0)\n",
+    "        \n",
     "sol = cp.Problem(cp.Maximize(f), g)\n",
     "print(\"Solution:\", sol.solve())\n",
     "print(\"c:\", c.value)\n",
